# aoc2020-rust

./: .gitignore  Cargo.toml  README.md
src/days/: d01p1.rs  d01p2.rs  d02p1.rs  d02p2.rs  d03p1.rs  d03p2.rs  d04p1.rs  d04p2.rs  d05p1.rs  d05p2.rs  d06p1.rs  d06p2.rs  d07p1.rs  d07p2.rs  d08p1.rs  d08p2.rs  d09p1.rs  d09p2.rs  d10p1.rs  d10p2.rs  d11p1.rs  d11p2.rs  d12p1.rs  d12p2.rs  d13p1.rs  d13p2.rs  d14p1.rs  d14p2.rs  d15p1.rs  d15p2.rs  d16p1.rs  d16p2.rs  d17p1.rs  d17p2.rs  d18p1.rs  d18p2.rs  d19p1.rs  d19p2.rs  d20p1.rs  d21p1.rs  (+8 more)
