[package]
name = "aoc2020-rust"
version = "0.1.0"
authors = ["Marcin Puc <marcin.e.puc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "d01p1"
path = "src/days/d01p1.rs"

[[bin]]
name = "d01p2"
path = "src/days/d01p2.rs"

[[bin]]
name = "d02p1"
path = "src/days/d02p1.rs"

[[bin]]
name = "d02p2"
path = "src/days/d02p2.rs"

[[bin]]
name = "d03p1"
path = "src/days/d03p1.rs"

[[bin]]
name = "d03p2"
path = "src/days/d03p2.rs"

[[bin]]
name = "d04p1"
path = "src/days/d04p1.rs"

[[bin]]
name = "d04p2"
path = "src/days/d04p2.rs"

[[bin]]
name = "d05p1"
path = "src/days/d05p1.rs"

[[bin]]
name = "d05p2"
path = "src/days/d05p2.rs"

[[bin]]
name = "d06p1"
path = "src/days/d06p1.rs"

[[bin]]
name = "d06p2"
path = "src/days/d06p2.rs"

[[bin]]
name = "d07p1"
path = "src/days/d07p1.rs"

[[bin]]
name = "d07p2"
path = "src/days/d07p2.rs"

[[bin]]
name = "d08p1"
path = "src/days/d08p1.rs"

[[bin]]
name = "d08p2"
path = "src/days/d08p2.rs"

[dependencies]
aoc-utils = "0.2.1"
itertools = "0.9.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
scan_fmt = "0.2.5"
