[package]
name = "aoc2020-rust"
version = "0.1.0"
authors = ["Marcin Puc <marcin.e.puc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "d01p1"
path = "src/days/d01p1.rs"

[[bin]]
name = "d01p2"
path = "src/days/d01p2.rs"

[[bin]]
name = "d02p1"
path = "src/days/d02p1.rs"

[[bin]]
name = "d02p2"
path = "src/days/d02p2.rs"

[[bin]]
name = "d03p1"
path = "src/days/d03p1.rs"

[[bin]]
name = "d03p2"
path = "src/days/d03p2.rs"

[[bin]]
name = "d04p1"
path = "src/days/d04p1.rs"

[[bin]]
name = "d04p2"
path = "src/days/d04p2.rs"

[[bin]]
name = "d05p1"
path = "src/days/d05p1.rs"

[[bin]]
name = "d05p2"
path = "src/days/d05p2.rs"

[[bin]]
name = "d06p1"
path = "src/days/d06p1.rs"

[[bin]]
name = "d06p2"
path = "src/days/d06p2.rs"

[[bin]]
name = "d07p1"
path = "src/days/d07p1.rs"

[[bin]]
name = "d07p2"
path = "src/days/d07p2.rs"

[[bin]]
name = "d08p1"
path = "src/days/d08p1.rs"

[[bin]]
name = "d08p2"
path = "src/days/d08p2.rs"

[[bin]]
name = "d09p1"
path = "src/days/d09p1.rs"

[[bin]]
name = "d09p2"
path = "src/days/d09p2.rs"

[[bin]]
name = "d10p1"
path = "src/days/d10p1.rs"

[[bin]]
name = "d10p2"
path = "src/days/d10p2.rs"

[[bin]]
name = "d11p1"
path = "src/days/d11p1.rs"

[[bin]]
name = "d11p2"
path = "src/days/d11p2.rs"

[[bin]]
name = "d12p1"
path = "src/days/d12p1.rs"

[[bin]]
name = "d12p2"
path = "src/days/d12p2.rs"

[[bin]]
name = "d13p1"
path = "src/days/d13p1.rs"

[[bin]]
name = "d13p2"
path = "src/days/d13p2.rs"

[[bin]]
name = "d14p1"
path = "src/days/d14p1.rs"

[[bin]]
name = "d14p2"
path = "src/days/d14p2.rs"

[[bin]]
name = "d15p1"
path = "src/days/d15p1.rs"

[[bin]]
name = "d15p2"
path = "src/days/d15p2.rs"

[[bin]]
name = "d16p1"
path = "src/days/d16p1.rs"

[[bin]]
name = "d16p2"
path = "src/days/d16p2.rs"

[[bin]]
name = "d17p1"
path = "src/days/d17p1.rs"

[[bin]]
name = "d17p2"
path = "src/days/d17p2.rs"

[[bin]]
name = "d18p1"
path = "src/days/d18p1.rs"

[[bin]]
name = "d18p2"
path = "src/days/d18p2.rs"

[[bin]]
name = "d19p1"
path = "src/days/d19p1.rs"

[[bin]]
name = "d19p2"
path = "src/days/d19p2.rs"

[[bin]]
name = "d20p1"
path = "src/days/d20p1.rs"

[[bin]]
name = "d21p1"
path = "src/days/d21p1.rs"

[[bin]]
name = "d21p2"
path = "src/days/d21p2.rs"

[[bin]]
name = "d22p1"
path = "src/days/d22p1.rs"

[[bin]]
name = "d22p2"
path = "src/days/d22p2.rs"

[[bin]]
name = "d23p1"
path = "src/days/d23p1.rs"

[[bin]]
name = "d23p2"
path = "src/days/d23p2.rs"

[[bin]]
name = "d24p1"
path = "src/days/d24p1.rs"

[[bin]]
name = "d24p2"
path = "src/days/d24p2.rs"

[[bin]]
name = "d25p1"
path = "src/days/d25p1.rs"

[dependencies]
aoc-utils = "0.2.1"
elapsed = "0.1.2"
hex2d = { version = "1.0.0", default-features = false }
itertools = "0.10.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
scan_fmt = { version = "0.2.5", default-features = false }
